tests/NormalTests/paczka1/fuzzy1/43004630.err
Error in line 11: BpLOCB S118 75,7
Error in line 14: 84Iyye S148 34,2
Error in line 34: A499 A499 63,2
